tests/ui/unknown_field.stderr
error: `Foo` has no field `c`
   --> unknown_field.ray:10:29
    |
 LL |     let a = Foo { a: &a, c: 20 };
    |                             ^^ 

